syntax = "proto3";

package com.example.service2.domain;

import "com/example/service2/domain/service2DomainObjects.proto";

message DoNothingCommand {
    DoNothing nothing = 1;
}